# fo76-ml-db

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CLAUDE.md  DOCUMENTATION_INDEX.md  LegendaryPerks.csv  MyNotes.txt  MyTodo.txt  PROJECT_ANALYSIS.md  Presentation.md  QUICK_REFERENCE.md  README.md  SCRAPER_README.md  TODO.md  TechStack.txt  api-start.sh  armor_scraped.csv  armor_scraper.py  debug_page.html  f76_schema.sql  import_armor.py  import_to_db.py  legendary_perk_scraper.py  package-lock.json  power_armor_scraped.csv  power_armor_scraper.py  power_armor_urls.txt  pyproject.toml  python-start.sh  queries.txt  requirements.txt  scraper.py  test_output.csv  test_output3.csv  urls.txt  validate_scraped_data.py  weapons_scraped.csv
api/: README.md  __init__.py  main.py
database/: add_weapon_mechanics.sql  backup_f76_20251022_141453.sql  collectibles_schema.sql  db_utils.py  f76_master_schema.sql  f76_schema.sql  f76_schema_normalized.sql  import_all.sh  import_armor.py  import_armor_normalized.py  import_collectibles.py  import_consumables.py  import_consumables_multi.py  import_consumables_normalized.py  import_legendary_effects.py  import_legendary_perks.py  import_mutations.py  import_mutations_normalized.py  import_perks.py  import_to_db.py  import_to_db_normalized.py  import_utils.py  import_weapon_mechanics.py  import_weapon_mods.py  import_weapons.py  legacy_connector.py  migrate_to_normalized.py  populate_perk_fks.py  test_weapon_mechanics.sql
docs/: ANTI_HALLUCINATION.md  CLAUDE.md  IMPORT_GUIDE.md  MCP_REFACTORING.md  RAG_ENHANCEMENTS.md  README.md  (+6 more)
(+123 files in other folders)
